# online-judge

./: .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.code-similarity  Dockerfile.judge-worker  Dockerfile.rate-limiter-rs  README.md  deploy-docker.sh  deploy.sh  docker-compose.production.yml  docker-compose.test-backends.yml  docker-compose.worker.yml  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.context/: README.md  new-languages-plan.md
.github/: dependabot.yml
code-similarity-rs/: Cargo.toml
code-similarity-rs/src/: main.rs  similarity.rs  types.rs
docker/: Dockerfile.judge-algol68  Dockerfile.judge-apl  Dockerfile.judge-arturo  Dockerfile.judge-b  Dockerfile.judge-bash  Dockerfile.judge-bqn  Dockerfile.judge-brainfuck  Dockerfile.judge-c3  Dockerfile.judge-carp  Dockerfile.judge-clang  Dockerfile.judge-cobol  Dockerfile.judge-commonlisp  Dockerfile.judge-cpp  Dockerfile.judge-csharp  Dockerfile.judge-curry  Dockerfile.judge-d  Dockerfile.judge-dart  Dockerfile.judge-elixir  Dockerfile.judge-erlang  Dockerfile.judge-esoteric  Dockerfile.judge-flix  Dockerfile.judge-forth  Dockerfile.judge-fortran  Dockerfile.judge-freebasic  Dockerfile.judge-fsharp  Dockerfile.judge-grain  Dockerfile.judge-groovy  Dockerfile.judge-haskell  Dockerfile.judge-haxe  (+41 more)
judge-worker-rs/: .env.example  Cargo.toml
judge-worker-rs/src/: api.rs  config.rs  docker.rs  executor.rs  languages.rs  main.rs  runner.rs  types.rs  validation.rs
(+1438 files in other folders)
